Add mutation rate experiments

--- a/BASC0047/coursework.ipynb
+++ b/BASC0047/coursework.ipynb
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 239,
+   "execution_count": 241,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -242,31 +242,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 240,
+   "execution_count": 242,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Items: 30, 44, 50, 80, 143, 145, 179, 284, 330, 351, 409, 422, 437, 450, 466, 603, 619, 722, 724, 789, 878, 910, 911, 932, 940, 979, 998\n",
-      "Total weight: 29.93\n",
-      "Total value: 20.64\n",
+      "Items: 30, 44, 48, 179, 222, 296, 329, 345, 473, 546, 549, 614, 634, 638, 645, 766, 770, 782, 877, 924, 950\n",
+      "Total weight: 29.90\n",
+      "Total value: 16.23\n",
       "\n",
-      "Items: 38, 73, 80, 109, 143, 178, 204, 288, 329, 447, 496, 530, 634, 674, 686, 744, 748, 753, 783, 899, 902, 904, 915, 940, 950\n",
-      "Total weight: 29.74\n",
-      "Total value: 18.96\n",
+      "Items: 30, 80, 107, 251, 259, 295, 329, 343, 359, 383, 513, 652, 686, 748, 765, 782, 789, 819, 850, 932, 977\n",
+      "Total weight: 29.94\n",
+      "Total value: 17.05\n",
       "\n",
-      "Items: 30, 44, 107, 109, 123, 192, 202, 259, 323, 329, 409, 443, 500, 618, 627, 652, 658, 674, 748, 765, 782, 786, 813, 924, 948, 998\n",
-      "Total weight: 29.97\n",
-      "Total value: 18.78\n",
+      "Items: 46, 47, 80, 109, 178, 235, 256, 257, 310, 359, 422, 443, 513, 519, 538, 619, 634, 674, 741, 748, 915, 920, 979\n",
+      "Total weight: 29.98\n",
+      "Total value: 16.63\n",
       "\n",
-      "Items: 49, 107, 133, 140, 178, 204, 305, 358, 361, 383, 444, 473, 549, 551, 574, 632, 686, 741, 766, 793, 815, 878, 902, 921, 947\n",
-      "Total weight: 29.89\n",
-      "Total value: 18.00\n",
+      "Items: 143, 145, 157, 178, 269, 286, 318, 473, 476, 504, 551, 603, 638, 686, 707, 752, 768, 813, 865, 905, 930, 948, 972\n",
+      "Total weight: 29.88\n",
+      "Total value: 15.71\n",
       "\n",
-      "232 ms ± 15.2 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n",
-      "10.32x faster\n"
+      "232 ms ± 1.45 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n",
+      "9.76x faster\n"
      ]
     }
    ],
@@ -275,6 +275,48 @@
     "show_genetic_algorithm(df_1000, ga_func=genetic_algorithm_np)\n",
     "timeit_1000_fast = %timeit -o genetic_algorithm_np(df_1000)\n",
     "print(f\"{timeit_1000.best/timeit_1000_fast.best:.2f}x faster\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 260,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mutation rate: 0      Max weight: 29.995  Average value: 10.640\n",
+      "Mutation rate: 0.001  Max weight: 29.950  Average value: 10.663\n",
+      "Mutation rate: 0.005  Max weight: 29.984  Average value: 11.777\n",
+      "Mutation rate: 0.01   Max weight: 29.964  Average value: 12.320\n",
+      "Mutation rate: 0.05   Max weight: 29.972  Average value: 12.791\n",
+      "Mutation rate: 0.1    Max weight: 29.984  Average value: 16.518\n",
+      "Mutation rate: 0.5    Max weight: 29.940  Average value: 20.379\n",
+      "Mutation rate: 1      Max weight: 29.901  Average value: 19.782\n",
+      "Mutation rate: 5      Max weight: 1048.483  Average value: 102.258\n",
+      "Mutation rate: 10     Max weight: 1681.427  Average value: 160.254\n",
+      "Mutation rate: 50     Max weight: 2513.048  Average value: 251.938\n",
+      "Mutation rate: 100    Max weight: 2550.751  Average value: 248.587\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Try different mutation rates\n",
+    "n_runs = 10\n",
+    "for mutation_rate in (0, 0.001, 0.005, 0.01, 0.05, 0.1, 0.5, 1, 5, 10, 50, 100):\n",
+    "    _, values, weights = list(zip(*[genetic_algorithm_np(df_1000, mutation_rate=mutation_rate) for _ in range(n_runs)]))\n",
+    "    print(f\"Mutation rate: {mutation_rate}\".ljust(22) + \n",
+    "        f\"Max weight: {max(weights):.3f}  \"\n",
+    "        f\"Average value: {sum(values)/n_runs:.3f}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- It looks like somewhere between the mutation rates of 1 and 5 (expected flips per individual), every member of the population becomes overweight.\n",
+    "- 0.5 - 1 looks optimal (for n = 1000 at least)."
    ]
   }
  ],
