--- a/BASC0047/coursework.ipynb
+++ b/BASC0047/coursework.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 234,
+   "execution_count": 269,
    "metadata": {},
    "outputs": [
     {
@@ -10,10 +10,10 @@
      "output_type": "stream",
      "text": [
       "  Name    Weight     Value\n",
-      "0    0  3.331509  0.150684\n",
-      "1    1  4.279698  0.071599\n",
-      "2    2  7.019322  0.955734\n",
-      "3    3  7.887609  0.511730\n"
+      "0    0  7.224940  0.115832\n",
+      "1    1  5.612525  0.511764\n",
+      "2    2  2.073984  0.220562\n",
+      "3    3  8.391002  0.608882\n"
      ]
     }
    ],
@@ -37,11 +37,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 235,
+   "execution_count": 270,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def genetic_algorithm(df, max_weight=30, population_size=100, num_generations=50, mutation_rate=0.2):\n",
+    "def genetic_algorithm(df, max_weight=30, population_size=100, num_generations=50, mutation_rate=1):\n",
     "    weights = df[\"Weight\"].tolist()\n",
     "    values = df[\"Value\"].tolist()\n",
     "    n = len(values)\n",
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 236,
+   "execution_count": 271,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,30 +115,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 237,
+   "execution_count": 272,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Items: 2, 4, 6, 10, 13, 14, 18\n",
-      "Total weight: 29.87\n",
-      "Total value: 4.90\n",
+      "Items: 3, 4, 6, 13, 14, 18\n",
+      "Total weight: 29.21\n",
+      "Total value: 4.82\n",
       "\n",
-      "Items: 2, 6, 7, 10, 13, 14, 15, 18\n",
-      "Total weight: 28.67\n",
+      "Items: 2, 4, 6, 7, 11, 13, 14, 18\n",
+      "Total weight: 29.82\n",
+      "Total value: 4.99\n",
+      "\n",
+      "Items: 4, 6, 7, 13, 14, 18, 19\n",
+      "Total weight: 29.94\n",
+      "Total value: 5.15\n",
+      "\n",
+      "Items: 1, 2, 4, 6, 7, 13, 14, 19\n",
+      "Total weight: 28.51\n",
       "Total value: 4.91\n",
       "\n",
-      "Items: 2, 8, 10, 13, 14, 15, 18\n",
-      "Total weight: 29.18\n",
-      "Total value: 4.69\n",
-      "\n",
-      "Items: 2, 4, 6, 10, 13, 14, 18\n",
-      "Total weight: 29.87\n",
-      "Total value: 4.90\n",
-      "\n",
-      "65.8 ms ± 1.1 ms per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
+      "72.8 ms ± 4.33 ms per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
      ]
     }
    ],
@@ -150,30 +150,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 238,
+   "execution_count": 273,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Items: 50, 79, 88, 107, 143, 184, 257, 259, 329, 453, 473, 476, 530, 549, 621, 678, 684, 739, 766, 847, 889, 902, 998\n",
-      "Total weight: 29.87\n",
-      "Total value: 16.74\n",
+      "Items: 32, 153, 194, 205, 238, 256, 271, 298, 338, 359, 400, 461, 493, 566, 571, 574, 584, 638, 768, 783, 806, 874, 882, 911, 920, 984\n",
+      "Total weight: 29.89\n",
+      "Total value: 19.75\n",
       "\n",
-      "Items: 38, 47, 110, 145, 178, 179, 192, 204, 259, 282, 358, 359, 395, 422, 476, 496, 506, 627, 645, 652, 684, 686, 740, 765, 782, 895, 910, 915, 947, 949, 950, 967\n",
+      "Items: 33, 71, 133, 153, 158, 193, 200, 262, 333, 397, 400, 426, 461, 655, 664, 669, 703, 734, 760, 783, 804, 874, 890, 935, 952, 984\n",
+      "Total weight: 29.84\n",
+      "Total value: 17.33\n",
+      "\n",
+      "Items: 25, 66, 175, 194, 200, 284, 285, 305, 333, 346, 355, 419, 446, 482, 550, 646, 683, 703, 769, 795, 806, 821, 952, 994\n",
+      "Total weight: 29.95\n",
+      "Total value: 17.08\n",
+      "\n",
+      "Items: 20, 82, 194, 218, 223, 238, 291, 298, 391, 461, 465, 485, 540, 584, 704, 765, 778, 832, 882, 973\n",
       "Total weight: 30.00\n",
-      "Total value: 23.62\n",
+      "Total value: 14.03\n",
       "\n",
-      "Items: 5, 79, 80, 155, 181, 190, 204, 259, 285, 328, 358, 402, 473, 476, 524, 530, 603, 638, 645, 671, 740, 794, 864, 902, 932, 977\n",
-      "Total weight: 30.00\n",
-      "Total value: 18.65\n",
-      "\n",
-      "Items: 143, 151, 220, 222, 225, 296, 311, 394, 447, 473, 476, 556, 634, 652, 657, 664, 686, 740, 755, 902, 932, 961, 979\n",
-      "Total weight: 29.73\n",
-      "Total value: 16.89\n",
-      "\n",
-      "2.28 s ± 32 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+      "2.14 s ± 42.1 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
      ]
     }
    ],
@@ -186,12 +186,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 241,
+   "execution_count": 274,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Rewrite using numpy\n",
-    "def genetic_algorithm_np(df, max_weight=30, population_size=100, num_generations=50, mutation_rate=0.2):\n",
+    "def genetic_algorithm_np(df, max_weight=30, population_size=100, num_generations=50, mutation_rate=1):\n",
     "    weights = df[\"Weight\"].to_numpy()\n",
     "    values = df[\"Value\"].to_numpy()\n",
     "    n = len(values)\n",
@@ -242,31 +242,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 242,
+   "execution_count": 275,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Items: 30, 44, 48, 179, 222, 296, 329, 345, 473, 546, 549, 614, 634, 638, 645, 766, 770, 782, 877, 924, 950\n",
+      "Items: 25, 31, 80, 153, 194, 220, 234, 260, 355, 378, 438, 461, 550, 578, 646, 664, 765, 806, 856, 935, 952, 963\n",
       "Total weight: 29.90\n",
-      "Total value: 16.23\n",
+      "Total value: 17.72\n",
       "\n",
-      "Items: 30, 80, 107, 251, 259, 295, 329, 343, 359, 383, 513, 652, 686, 748, 765, 782, 789, 819, 850, 932, 977\n",
-      "Total weight: 29.94\n",
-      "Total value: 17.05\n",
+      "Items: 49, 74, 200, 205, 223, 252, 310, 461, 463, 487, 646, 699, 708, 756, 765, 805, 806, 808, 829, 863, 935, 975\n",
+      "Total weight: 29.89\n",
+      "Total value: 16.10\n",
       "\n",
-      "Items: 46, 47, 80, 109, 178, 235, 256, 257, 310, 359, 422, 443, 513, 519, 538, 619, 634, 674, 741, 748, 915, 920, 979\n",
+      "Items: 25, 143, 154, 155, 175, 252, 256, 284, 333, 374, 397, 479, 504, 583, 605, 618, 655, 664, 784, 789, 821, 882, 890, 903, 959\n",
+      "Total weight: 29.97\n",
+      "Total value: 16.59\n",
+      "\n",
+      "Items: 71, 153, 176, 179, 218, 238, 251, 270, 374, 498, 500, 560, 638, 696, 741, 843, 856\n",
       "Total weight: 29.98\n",
-      "Total value: 16.63\n",
+      "Total value: 12.11\n",
       "\n",
-      "Items: 143, 145, 157, 178, 269, 286, 318, 473, 476, 504, 551, 603, 638, 686, 707, 752, 768, 813, 865, 905, 930, 948, 972\n",
-      "Total weight: 29.88\n",
-      "Total value: 15.71\n",
-      "\n",
-      "232 ms ± 1.45 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n",
-      "9.76x faster\n"
+      "232 ms ± 3.34 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n",
+      "9.25x faster\n"
      ]
     }
    ],
@@ -279,25 +279,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 260,
+   "execution_count": 276,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mutation rate: 0      Max weight: 29.995  Average value: 10.640\n",
-      "Mutation rate: 0.001  Max weight: 29.950  Average value: 10.663\n",
-      "Mutation rate: 0.005  Max weight: 29.984  Average value: 11.777\n",
-      "Mutation rate: 0.01   Max weight: 29.964  Average value: 12.320\n",
-      "Mutation rate: 0.05   Max weight: 29.972  Average value: 12.791\n",
-      "Mutation rate: 0.1    Max weight: 29.984  Average value: 16.518\n",
-      "Mutation rate: 0.5    Max weight: 29.940  Average value: 20.379\n",
-      "Mutation rate: 1      Max weight: 29.901  Average value: 19.782\n",
-      "Mutation rate: 5      Max weight: 1048.483  Average value: 102.258\n",
-      "Mutation rate: 10     Max weight: 1681.427  Average value: 160.254\n",
-      "Mutation rate: 50     Max weight: 2513.048  Average value: 251.938\n",
-      "Mutation rate: 100    Max weight: 2550.751  Average value: 248.587\n"
+      "Mutation rate: 0      Max weight: 29.925  Average value: 9.816\n",
+      "Mutation rate: 0.001  Max weight: 29.753  Average value: 10.615\n",
+      "Mutation rate: 0.005  Max weight: 29.952  Average value: 10.677\n",
+      "Mutation rate: 0.01   Max weight: 29.956  Average value: 11.390\n",
+      "Mutation rate: 0.05   Max weight: 30.000  Average value: 14.356\n",
+      "Mutation rate: 0.1    Max weight: 29.995  Average value: 14.532\n",
+      "Mutation rate: 0.5    Max weight: 29.870  Average value: 19.010\n",
+      "Mutation rate: 1      Max weight: 88.288  Average value: 18.102\n",
+      "Mutation rate: 5      Max weight: 1086.124  Average value: 96.895\n",
+      "Mutation rate: 10     Max weight: 1749.592  Average value: 156.361\n",
+      "Mutation rate: 50     Max weight: 2556.457  Average value: 240.127\n",
+      "Mutation rate: 100    Max weight: 2603.142  Average value: 239.680\n"
      ]
     }
    ],
@@ -315,7 +315,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- It looks like somewhere between the mutation rates of 1 and 5 (expected flips per individual), every member of the population becomes overweight.\n",
+    "- It looks like somewhere between the mutation rates of 1 and 5, every member of the population becomes overweight.\n",
     "- 0.5 - 1 looks optimal (for n = 1000 at least)."
    ]
   }
