Update value and weight ranges

--- a/BASC0047/coursework.ipynb
+++ b/BASC0047/coursework.ipynb
@@ -2,18 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 269,
+   "execution_count": 308,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  Name    Weight     Value\n",
-      "0    0  7.224940  0.115832\n",
-      "1    1  5.612525  0.511764\n",
-      "2    2  2.073984  0.220562\n",
-      "3    3  8.391002  0.608882\n"
+      "  Name  Weight  Value\n",
+      "0    0     4.3      1\n",
+      "1    1     8.6      1\n",
+      "2    2     1.9      4\n",
+      "3    3     2.9      1\n"
      ]
     }
    ],
@@ -22,9 +22,9 @@
     "import numpy as np\n",
     "import random\n",
     "\n",
-    "def generate_item_df(num_items = 20, weight_range = (0, 10), value_range = (0, 1)):\n",
-    "    weights = np.random.uniform(*weight_range, num_items)\n",
-    "    values = np.random.uniform(*value_range, num_items)\n",
+    "def generate_item_df(num_items = 20, weight_range = (0, 10), value_range = (1, 5 + 1)):\n",
+    "    weights = np.round(np.random.uniform(*weight_range, num_items), 1)\n",
+    "    values = np.random.randint(*value_range, num_items)\n",
     "    return pd.DataFrame({\n",
     "        'Name': [str(i) for i in range(num_items)],\n",
     "        'Weight': weights,\n",
@@ -37,11 +37,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 270,
+   "execution_count": 309,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def genetic_algorithm(df, max_weight=30, population_size=100, num_generations=50, mutation_rate=1):\n",
+    "def genetic_algorithm(df, max_weight=30, population_size=100, num_generations=50, mutation_rate=0.5):\n",
     "    weights = df[\"Weight\"].tolist()\n",
     "    values = df[\"Value\"].tolist()\n",
     "    n = len(values)\n",
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 271,
+   "execution_count": 310,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,37 +108,37 @@
     "    for _ in range(n_runs):\n",
     "        items, value, weight = ga_func(df, population_size=population_size, num_generations=num_generations, mutation_rate=mutation_rate)\n",
     "        print(f\"Items: {', '.join(items['Name'].tolist())}\")\n",
-    "        print(f\"Total weight: {weight:.2f}\")\n",
-    "        print(f\"Total value: {value:.2f}\")\n",
+    "        print(f\"Total weight: {weight:.1f}\")\n",
+    "        print(f\"Total value: {value}\")\n",
     "        print()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 272,
+   "execution_count": 311,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Items: 3, 4, 6, 13, 14, 18\n",
-      "Total weight: 29.21\n",
-      "Total value: 4.82\n",
+      "Items: 2, 4, 7, 9, 10, 11, 14, 16, 18, 19\n",
+      "Total weight: 29.3\n",
+      "Total value: 32\n",
       "\n",
-      "Items: 2, 4, 6, 7, 11, 13, 14, 18\n",
-      "Total weight: 29.82\n",
-      "Total value: 4.99\n",
+      "Items: 2, 4, 5, 7, 9, 11, 12, 14, 16, 19\n",
+      "Total weight: 29.7\n",
+      "Total value: 32\n",
       "\n",
-      "Items: 4, 6, 7, 13, 14, 18, 19\n",
-      "Total weight: 29.94\n",
-      "Total value: 5.15\n",
+      "Items: 2, 4, 5, 9, 10, 11, 14, 16, 19\n",
+      "Total weight: 28.6\n",
+      "Total value: 33\n",
       "\n",
-      "Items: 1, 2, 4, 6, 7, 13, 14, 19\n",
-      "Total weight: 28.51\n",
-      "Total value: 4.91\n",
+      "Items: 2, 4, 6, 7, 9, 10, 11, 14, 16, 19\n",
+      "Total weight: 28.2\n",
+      "Total value: 32\n",
       "\n",
-      "72.8 ms ± 4.33 ms per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
+      "69.8 ms ± 4.21 ms per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
      ]
     }
    ],
@@ -150,30 +150,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 273,
+   "execution_count": 312,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Items: 32, 153, 194, 205, 238, 256, 271, 298, 338, 359, 400, 461, 493, 566, 571, 574, 584, 638, 768, 783, 806, 874, 882, 911, 920, 984\n",
-      "Total weight: 29.89\n",
-      "Total value: 19.75\n",
+      "Items: 25, 37, 43, 108, 160, 172, 236, 239, 259, 286, 360, 365, 427, 539, 547, 569, 576, 650, 688, 728, 767, 781, 817, 819, 835, 926, 971, 994\n",
+      "Total weight: 29.6\n",
+      "Total value: 113\n",
       "\n",
-      "Items: 33, 71, 133, 153, 158, 193, 200, 262, 333, 397, 400, 426, 461, 655, 664, 669, 703, 734, 760, 783, 804, 874, 890, 935, 952, 984\n",
-      "Total weight: 29.84\n",
-      "Total value: 17.33\n",
+      "Items: 108, 145, 160, 219, 232, 272, 277, 286, 300, 327, 345, 374, 386, 395, 410, 577, 632, 710, 723, 781, 835, 911, 931, 979\n",
+      "Total weight: 29.1\n",
+      "Total value: 100\n",
       "\n",
-      "Items: 25, 66, 175, 194, 200, 284, 285, 305, 333, 346, 355, 419, 446, 482, 550, 646, 683, 703, 769, 795, 806, 821, 952, 994\n",
-      "Total weight: 29.95\n",
-      "Total value: 17.08\n",
+      "Items: 25, 63, 90, 154, 257, 277, 362, 386, 395, 417, 421, 481, 483, 500, 513, 569, 680, 705, 730, 748, 776, 781, 812, 813, 850, 911\n",
+      "Total weight: 29.9\n",
+      "Total value: 105\n",
       "\n",
-      "Items: 20, 82, 194, 218, 223, 238, 291, 298, 391, 461, 465, 485, 540, 584, 704, 765, 778, 832, 882, 973\n",
-      "Total weight: 30.00\n",
-      "Total value: 14.03\n",
+      "Items: 25, 63, 83, 90, 107, 108, 172, 196, 221, 257, 259, 277, 363, 378, 421, 468, 500, 513, 575, 776, 806, 836, 842, 853, 931, 994, 998\n",
+      "Total weight: 30.0\n",
+      "Total value: 105\n",
       "\n",
-      "2.14 s ± 42.1 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+      "2.22 s ± 39.5 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
      ]
     }
    ],
@@ -186,12 +186,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 274,
+   "execution_count": 313,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Rewrite using numpy\n",
-    "def genetic_algorithm_np(df, max_weight=30, population_size=100, num_generations=50, mutation_rate=1):\n",
+    "def genetic_algorithm_np(df, max_weight=30, population_size=100, num_generations=50, mutation_rate=0.5):\n",
     "    weights = df[\"Weight\"].to_numpy()\n",
     "    values = df[\"Value\"].to_numpy()\n",
     "    n = len(values)\n",
@@ -242,31 +242,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 275,
+   "execution_count": 314,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Items: 25, 31, 80, 153, 194, 220, 234, 260, 355, 378, 438, 461, 550, 578, 646, 664, 765, 806, 856, 935, 952, 963\n",
-      "Total weight: 29.90\n",
-      "Total value: 17.72\n",
+      "Items: 25, 100, 160, 172, 221, 300, 327, 362, 373, 500, 537, 628, 641, 710, 714, 728, 741, 764, 767, 836, 911, 914, 927, 971\n",
+      "Total weight: 30.0\n",
+      "Total value: 99\n",
       "\n",
-      "Items: 49, 74, 200, 205, 223, 252, 310, 461, 463, 487, 646, 699, 708, 756, 765, 805, 806, 808, 829, 863, 935, 975\n",
-      "Total weight: 29.89\n",
-      "Total value: 16.10\n",
+      "Items: 25, 31, 59, 192, 221, 287, 345, 395, 396, 492, 500, 513, 582, 635, 657, 707, 710, 761, 767, 813, 817, 819, 956, 998\n",
+      "Total weight: 30.0\n",
+      "Total value: 88\n",
       "\n",
-      "Items: 25, 143, 154, 155, 175, 252, 256, 284, 333, 374, 397, 479, 504, 583, 605, 618, 655, 664, 784, 789, 821, 882, 890, 903, 959\n",
-      "Total weight: 29.97\n",
-      "Total value: 16.59\n",
+      "Items: 84, 90, 97, 143, 154, 184, 225, 259, 339, 360, 428, 513, 575, 635, 765, 781, 787, 822, 931\n",
+      "Total weight: 30.0\n",
+      "Total value: 69\n",
       "\n",
-      "Items: 71, 153, 176, 179, 218, 238, 251, 270, 374, 498, 500, 560, 638, 696, 741, 843, 856\n",
-      "Total weight: 29.98\n",
-      "Total value: 12.11\n",
+      "Items: 25, 31, 61, 107, 145, 257, 286, 310, 381, 484, 500, 531, 569, 575, 728, 791, 833, 835, 868, 927, 994\n",
+      "Total weight: 30.0\n",
+      "Total value: 81\n",
       "\n",
-      "232 ms ± 3.34 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n",
-      "9.25x faster\n"
+      "266 ms ± 10.4 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n",
+      "8.41x faster\n"
      ]
     }
    ],
@@ -279,25 +279,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 276,
+   "execution_count": 317,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mutation rate: 0      Max weight: 29.925  Average value: 9.816\n",
-      "Mutation rate: 0.001  Max weight: 29.753  Average value: 10.615\n",
-      "Mutation rate: 0.005  Max weight: 29.952  Average value: 10.677\n",
-      "Mutation rate: 0.01   Max weight: 29.956  Average value: 11.390\n",
-      "Mutation rate: 0.05   Max weight: 30.000  Average value: 14.356\n",
-      "Mutation rate: 0.1    Max weight: 29.995  Average value: 14.532\n",
-      "Mutation rate: 0.5    Max weight: 29.870  Average value: 19.010\n",
-      "Mutation rate: 1      Max weight: 88.288  Average value: 18.102\n",
-      "Mutation rate: 5      Max weight: 1086.124  Average value: 96.895\n",
-      "Mutation rate: 10     Max weight: 1749.592  Average value: 156.361\n",
-      "Mutation rate: 50     Max weight: 2556.457  Average value: 240.127\n",
-      "Mutation rate: 100    Max weight: 2603.142  Average value: 239.680\n"
+      "Mutation rate: 0      Max weight: 29.8  Average value: 55.3\n",
+      "Mutation rate: 0.001  Max weight: 29.8  Average value: 58.1\n",
+      "Mutation rate: 0.005  Max weight: 30.0  Average value: 57.2\n",
+      "Mutation rate: 0.01   Max weight: 30.0  Average value: 59.9\n",
+      "Mutation rate: 0.05   Max weight: 30.0  Average value: 66.5\n",
+      "Mutation rate: 0.1    Max weight: 30.0  Average value: 78.6\n",
+      "Mutation rate: 0.5    Max weight: 30.0  Average value: 104.8\n",
+      "Mutation rate: 1      Max weight: 29.7  Average value: 93.5\n",
+      "Mutation rate: 5      Max weight: 1167.8  Average value: 582.4\n",
+      "Mutation rate: 10     Max weight: 1751.1  Average value: 914.9\n",
+      "Mutation rate: 50     Max weight: 2593.4  Average value: 1453.8\n",
+      "Mutation rate: 100    Max weight: 2701.4  Average value: 1463.9\n"
      ]
     }
    ],
@@ -307,8 +307,8 @@
     "for mutation_rate in (0, 0.001, 0.005, 0.01, 0.05, 0.1, 0.5, 1, 5, 10, 50, 100):\n",
     "    _, values, weights = list(zip(*[genetic_algorithm_np(df_1000, mutation_rate=mutation_rate) for _ in range(n_runs)]))\n",
     "    print(f\"Mutation rate: {mutation_rate}\".ljust(22) + \n",
-    "        f\"Max weight: {max(weights):.3f}  \"\n",
-    "        f\"Average value: {sum(values)/n_runs:.3f}\")"
+    "        f\"Max weight: {max(weights):.1f}  \"\n",
+    "        f\"Average value: {sum(values)/n_runs:.1f}\")"
    ]
   },
   {
