Add addresses and clean up code

--- a/BASC0047/coursework.ipynb
+++ b/BASC0047/coursework.ipynb
@@ -2,27 +2,43 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 308,
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import random\n",
+    "\n",
+    "pd.set_option('display.width',1000)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Data generation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  Name  Weight  Value\n",
-      "0    0     4.3      1\n",
-      "1    1     8.6      1\n",
-      "2    2     1.9      4\n",
-      "3    3     2.9      1\n"
+      "  Name  Weight  Value       address_line_1                          city  postcode   latitude  longitude\n",
+      "0    0     2.9      1    15 St Marys Close            North Lincolnshire  DN17 4NP  53.609854  -0.825200\n",
+      "1    1     9.0      5           Park Place  Bath and North East Somerset  BS39 4EQ  51.362625  -2.575737\n",
+      "2    2     3.9      1  128 Pershore Avenue                      Bradford   BD7 3JE  53.785587  -1.779740\n",
+      "3    3     9.9      5         6 Gala Drive                        Slough   SL1 5UB  51.510894  -0.644514\n"
      ]
     }
    ],
    "source": [
-    "import pandas as pd\n",
-    "import numpy as np\n",
-    "import random\n",
-    "\n",
-    "def generate_item_df(num_items = 20, weight_range = (0, 10), value_range = (1, 5 + 1)):\n",
+    "def generate_weights_and_values(num_items, weight_range, value_range):\n",
     "    weights = np.round(np.random.uniform(*weight_range, num_items), 1)\n",
     "    values = np.random.randint(*value_range, num_items)\n",
     "    return pd.DataFrame({\n",
@@ -31,13 +47,31 @@
     "        'Value': values\n",
     "    })\n",
     "\n",
-    "df = generate_item_df()\n",
-    "print(df.head(4))"
+    "df_addresses = pd.read_csv(\"full_addresses.csv\")\n",
+    "df = generate_weights_and_values(len(df_addresses), (2, 10), (1, 5 + 1))\n",
+    "df = df.join(df_addresses)\n",
+    "df_20 = df.head(20)\n",
+    "\n",
+    "print(df_20.head(4))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Genetic Algorithm"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Pure python implementation"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 309,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,14 +133,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 310,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def show_genetic_algorithm(df, ga_func=genetic_algorithm, n_runs=4,\n",
+    "def show_genetic_algorithm(df, n_runs=4,\n",
     "                           population_size=100, num_generations=50, mutation_rate=0.2):\n",
     "    for _ in range(n_runs):\n",
-    "        items, value, weight = ga_func(df, population_size=population_size, num_generations=num_generations, mutation_rate=mutation_rate)\n",
+    "        items, value, weight = genetic_algorithm(df, population_size=population_size, num_generations=num_generations, mutation_rate=mutation_rate)\n",
     "        print(f\"Items: {', '.join(items['Name'].tolist())}\")\n",
     "        print(f\"Total weight: {weight:.1f}\")\n",
     "        print(f\"Total value: {value}\")\n",
@@ -115,83 +149,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 311,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Items: 2, 4, 7, 9, 10, 11, 14, 16, 18, 19\n",
-      "Total weight: 29.3\n",
-      "Total value: 32\n",
+      "Items: 0, 1, 4, 6, 7, 8, 14, 16, 17, 19\n",
+      "Total weight: 29.6\n",
+      "Total value: 35\n",
       "\n",
-      "Items: 2, 4, 5, 7, 9, 11, 12, 14, 16, 19\n",
-      "Total weight: 29.7\n",
-      "Total value: 32\n",
-      "\n",
-      "Items: 2, 4, 5, 9, 10, 11, 14, 16, 19\n",
-      "Total weight: 28.6\n",
+      "Items: 0, 1, 2, 3, 6, 7, 11, 16, 17\n",
+      "Total weight: 28.8\n",
       "Total value: 33\n",
       "\n",
-      "Items: 2, 4, 6, 7, 9, 10, 11, 14, 16, 19\n",
-      "Total weight: 28.2\n",
-      "Total value: 32\n",
+      "Items: 0, 1, 6, 7, 8, 11, 15, 16, 17\n",
+      "Total weight: 29.9\n",
+      "Total value: 34\n",
       "\n",
-      "69.8 ms ± 4.21 ms per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
+      "Items: 0, 1, 2, 4, 6, 7, 8, 16, 17, 18, 19\n",
+      "Total weight: 28.9\n",
+      "Total value: 36\n",
+      "\n"
      ]
     }
    ],
    "source": [
-    "# Test with the original 20 items\n",
-    "show_genetic_algorithm(df)\n",
-    "%timeit genetic_algorithm(df)"
+    "show_genetic_algorithm(df_20)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 312,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Items: 25, 37, 43, 108, 160, 172, 236, 239, 259, 286, 360, 365, 427, 539, 547, 569, 576, 650, 688, 728, 767, 781, 817, 819, 835, 926, 971, 994\n",
-      "Total weight: 29.6\n",
-      "Total value: 113\n",
-      "\n",
-      "Items: 108, 145, 160, 219, 232, 272, 277, 286, 300, 327, 345, 374, 386, 395, 410, 577, 632, 710, 723, 781, 835, 911, 931, 979\n",
-      "Total weight: 29.1\n",
-      "Total value: 100\n",
-      "\n",
-      "Items: 25, 63, 90, 154, 257, 277, 362, 386, 395, 417, 421, 481, 483, 500, 513, 569, 680, 705, 730, 748, 776, 781, 812, 813, 850, 911\n",
-      "Total weight: 29.9\n",
-      "Total value: 105\n",
-      "\n",
-      "Items: 25, 63, 83, 90, 107, 108, 172, 196, 221, 257, 259, 277, 363, 378, 421, 468, 500, 513, 575, 776, 806, 836, 842, 853, 931, 994, 998\n",
-      "Total weight: 30.0\n",
-      "Total value: 105\n",
-      "\n",
-      "2.22 s ± 39.5 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+      "426 ms ± 4.01 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
      ]
     }
    ],
    "source": [
-    "# Test with 1000 items - slow\n",
-    "df_1000 = generate_item_df(1000)\n",
-    "show_genetic_algorithm(df_1000)\n",
-    "timeit_1000 = %timeit -o genetic_algorithm(df_1000)"
+    "ga_time_python = %timeit -o genetic_algorithm(df)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Numpy implementation"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 313,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Rewrite using numpy\n",
-    "def genetic_algorithm_np(df, max_weight=30, population_size=100, num_generations=50, mutation_rate=0.5):\n",
+    "def genetic_algorithm(df, max_weight=30, population_size=100, num_generations=50, mutation_rate=0.5):\n",
     "    weights = df[\"Weight\"].to_numpy()\n",
     "    values = df[\"Value\"].to_numpy()\n",
     "    n = len(values)\n",
@@ -242,70 +261,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 314,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Items: 25, 100, 160, 172, 221, 300, 327, 362, 373, 500, 537, 628, 641, 710, 714, 728, 741, 764, 767, 836, 911, 914, 927, 971\n",
-      "Total weight: 30.0\n",
-      "Total value: 99\n",
-      "\n",
-      "Items: 25, 31, 59, 192, 221, 287, 345, 395, 396, 492, 500, 513, 582, 635, 657, 707, 710, 761, 767, 813, 817, 819, 956, 998\n",
-      "Total weight: 30.0\n",
-      "Total value: 88\n",
-      "\n",
-      "Items: 84, 90, 97, 143, 154, 184, 225, 259, 339, 360, 428, 513, 575, 635, 765, 781, 787, 822, 931\n",
-      "Total weight: 30.0\n",
-      "Total value: 69\n",
-      "\n",
-      "Items: 25, 31, 61, 107, 145, 257, 286, 310, 381, 484, 500, 531, 569, 575, 728, 791, 833, 835, 868, 927, 994\n",
-      "Total weight: 30.0\n",
-      "Total value: 81\n",
-      "\n",
-      "266 ms ± 10.4 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n",
-      "8.41x faster\n"
+      "207 ms ± 7.83 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n",
+      "2.10x faster\n"
      ]
     }
    ],
    "source": [
-    "# Test numpy version - 10x faster\n",
-    "show_genetic_algorithm(df_1000, ga_func=genetic_algorithm_np)\n",
-    "timeit_1000_fast = %timeit -o genetic_algorithm_np(df_1000)\n",
-    "print(f\"{timeit_1000.best/timeit_1000_fast.best:.2f}x faster\")"
+    "# Not much faster with 200 items, but gets significantly faster with thousands of items.\n",
+    "ga_time_numpy = %timeit -o genetic_algorithm(df)\n",
+    "print(f\"{ga_time_python.best/ga_time_numpy.best:.2f}x faster\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Mutation rate tests"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 317,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mutation rate: 0      Max weight: 29.8  Average value: 55.3\n",
-      "Mutation rate: 0.001  Max weight: 29.8  Average value: 58.1\n",
-      "Mutation rate: 0.005  Max weight: 30.0  Average value: 57.2\n",
-      "Mutation rate: 0.01   Max weight: 30.0  Average value: 59.9\n",
-      "Mutation rate: 0.05   Max weight: 30.0  Average value: 66.5\n",
-      "Mutation rate: 0.1    Max weight: 30.0  Average value: 78.6\n",
-      "Mutation rate: 0.5    Max weight: 30.0  Average value: 104.8\n",
-      "Mutation rate: 1      Max weight: 29.7  Average value: 93.5\n",
-      "Mutation rate: 5      Max weight: 1167.8  Average value: 582.4\n",
-      "Mutation rate: 10     Max weight: 1751.1  Average value: 914.9\n",
-      "Mutation rate: 50     Max weight: 2593.4  Average value: 1453.8\n",
-      "Mutation rate: 100    Max weight: 2701.4  Average value: 1463.9\n"
+      "Mutation rate: 0      Max weight: 29.9  Average value: 58.1\n",
+      "Mutation rate: 0.001  Max weight: 29.9  Average value: 56.2\n",
+      "Mutation rate: 0.005  Max weight: 30.0  Average value: 58.4\n",
+      "Mutation rate: 0.01   Max weight: 30.0  Average value: 63.7\n",
+      "Mutation rate: 0.05   Max weight: 30.0  Average value: 66.2\n",
+      "Mutation rate: 0.1    Max weight: 30.0  Average value: 79.1\n",
+      "Mutation rate: 0.5    Max weight: 30.0  Average value: 95.4\n",
+      "Mutation rate: 1      Max weight: 30.0  Average value: 91.5\n",
+      "Mutation rate: 5      Max weight: 499.5  Average value: 271.5\n",
+      "Mutation rate: 10     Max weight: 575.3  Average value: 288.2\n",
+      "Mutation rate: 50     Max weight: 532.9  Average value: 290.0\n",
+      "Mutation rate: 100    Max weight: 580.8  Average value: 289.7\n"
      ]
     }
    ],
    "source": [
-    "# Try different mutation rates\n",
     "n_runs = 10\n",
     "for mutation_rate in (0, 0.001, 0.005, 0.01, 0.05, 0.1, 0.5, 1, 5, 10, 50, 100):\n",
-    "    _, values, weights = list(zip(*[genetic_algorithm_np(df_1000, mutation_rate=mutation_rate) for _ in range(n_runs)]))\n",
+    "    _, values, weights = list(zip(*[genetic_algorithm(df, mutation_rate=mutation_rate) for _ in range(n_runs)]))\n",
     "    print(f\"Mutation rate: {mutation_rate}\".ljust(22) + \n",
     "        f\"Max weight: {max(weights):.1f}  \"\n",
     "        f\"Average value: {sum(values)/n_runs:.1f}\")"
@@ -316,7 +324,43 @@
    "metadata": {},
    "source": [
     "- It looks like somewhere between the mutation rates of 1 and 5, every member of the population becomes overweight.\n",
-    "- 0.5 - 1 looks optimal (for n = 1000 at least)."
+    "- ~0.5 looks optimal."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Actual Usage"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total weight: 29.6. Total value: 28\n",
+      "\n",
+      "   Name  Weight  Value      address_line_1          city  postcode   latitude  longitude\n",
+      "7     7     4.4      4       60 North Side     Rotherham   S62 7BP  53.467018  -1.343493\n",
+      "9     9     4.2      3      4 Queens Grove     Maidstone  ME15 9DU  51.244976   0.551896\n",
+      "11   11     4.5      3         4 Viewlands        Sefton   PR8 3TF  53.595472  -3.044394\n",
+      "12   12     5.3      5  34 Goldring Avenue    Sunderland   DH5 9FR  54.826545  -1.463713\n",
+      "14   14     5.0      5    2 Oaklands Close       Lambeth   SE5 9BA  51.466873  -0.099495\n",
+      "15   15     4.1      5  151 Rose Hill Road       Norwich   NR1 3PS  52.620659   1.295188\n",
+      "17   17     2.1      3       49 Kingscroft  East Suffolk  IP17 3DL  52.272931   1.622348\n"
+     ]
+    }
+   ],
+   "source": [
+    "chosen_items, total_value, total_weight = genetic_algorithm(df_20)\n",
+    "print(f\"Total weight: {total_weight}. Total value: {total_value}\")\n",
+    "print()\n",
+    "print(chosen_items)"
    ]
   }
  ],
