Dont make copies of dataframes

--- a/BASC0047/coursework.ipynb
+++ b/BASC0047/coursework.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -30,10 +30,10 @@
      "output_type": "stream",
      "text": [
       "  Name  Weight  Value       address_line_1                          city  postcode   latitude  longitude\n",
-      "0    0     2.9      1    15 St Marys Close            North Lincolnshire  DN17 4NP  53.609854  -0.825200\n",
-      "1    1     9.0      5           Park Place  Bath and North East Somerset  BS39 4EQ  51.362625  -2.575737\n",
-      "2    2     3.9      1  128 Pershore Avenue                      Bradford   BD7 3JE  53.785587  -1.779740\n",
-      "3    3     9.9      5         6 Gala Drive                        Slough   SL1 5UB  51.510894  -0.644514\n"
+      "0    0     4.3      3    15 St Marys Close            North Lincolnshire  DN17 4NP  53.609854  -0.825200\n",
+      "1    1     4.6      4           Park Place  Bath and North East Somerset  BS39 4EQ  51.362625  -2.575737\n",
+      "2    2     4.4      4  128 Pershore Avenue                      Bradford   BD7 3JE  53.785587  -1.779740\n",
+      "3    3     7.4      4         6 Gala Drive                        Slough   SL1 5UB  51.510894  -0.644514\n"
      ]
     }
    ],
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,12 +128,12 @@
     "        population = new_population\n",
     "\n",
     "    best = max(population, key=fitness)\n",
-    "    return df[[bool(bit) for bit in best]].copy(), get_total_value(best), get_total_weight(best)\n"
+    "    return df[[bool(bit) for bit in best]], get_total_value(best), get_total_weight(best)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,28 +149,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Items: 0, 1, 4, 6, 7, 8, 14, 16, 17, 19\n",
-      "Total weight: 29.6\n",
-      "Total value: 35\n",
+      "Items: 2, 6, 8, 9, 16, 17, 19\n",
+      "Total weight: 28.4\n",
+      "Total value: 29\n",
       "\n",
-      "Items: 0, 1, 2, 3, 6, 7, 11, 16, 17\n",
-      "Total weight: 28.8\n",
-      "Total value: 33\n",
-      "\n",
-      "Items: 0, 1, 6, 7, 8, 11, 15, 16, 17\n",
+      "Items: 1, 2, 6, 8, 11, 16, 17, 19\n",
       "Total weight: 29.9\n",
-      "Total value: 34\n",
+      "Total value: 30\n",
       "\n",
-      "Items: 0, 1, 2, 4, 6, 7, 8, 16, 17, 18, 19\n",
-      "Total weight: 28.9\n",
-      "Total value: 36\n",
+      "Items: 1, 2, 6, 8, 11, 16, 17, 19\n",
+      "Total weight: 29.9\n",
+      "Total value: 30\n",
+      "\n",
+      "Items: 1, 6, 8, 9, 16, 17, 19\n",
+      "Total weight: 28.6\n",
+      "Total value: 29\n",
       "\n"
      ]
     }
@@ -181,14 +181,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "426 ms ± 4.01 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+      "435 ms ± 28.8 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
      ]
     }
    ],
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -255,21 +255,21 @@
     "        population = np.array(new_population)\n",
     "\n",
     "    best = max(population, key=fitness)\n",
-    "    best_items = df.iloc[best.astype(bool)].copy()\n",
+    "    best_items = df.iloc[best.astype(bool)]\n",
     "    return best_items, np.dot(values, best), np.dot(weights, best)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "207 ms ± 7.83 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n",
-      "2.10x faster\n"
+      "200 ms ± 3.04 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n",
+      "2.14x faster\n"
      ]
     }
    ],
@@ -288,25 +288,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mutation rate: 0      Max weight: 29.9  Average value: 58.1\n",
-      "Mutation rate: 0.001  Max weight: 29.9  Average value: 56.2\n",
-      "Mutation rate: 0.005  Max weight: 30.0  Average value: 58.4\n",
-      "Mutation rate: 0.01   Max weight: 30.0  Average value: 63.7\n",
-      "Mutation rate: 0.05   Max weight: 30.0  Average value: 66.2\n",
-      "Mutation rate: 0.1    Max weight: 30.0  Average value: 79.1\n",
-      "Mutation rate: 0.5    Max weight: 30.0  Average value: 95.4\n",
-      "Mutation rate: 1      Max weight: 30.0  Average value: 91.5\n",
-      "Mutation rate: 5      Max weight: 499.5  Average value: 271.5\n",
-      "Mutation rate: 10     Max weight: 575.3  Average value: 288.2\n",
-      "Mutation rate: 50     Max weight: 532.9  Average value: 290.0\n",
-      "Mutation rate: 100    Max weight: 580.8  Average value: 289.7\n"
+      "Mutation rate: 0      Max weight: 30.0  Average value: 37.0\n",
+      "Mutation rate: 0.001  Max weight: 29.8  Average value: 40.0\n",
+      "Mutation rate: 0.005  Max weight: 30.0  Average value: 39.2\n",
+      "Mutation rate: 0.01   Max weight: 30.0  Average value: 39.0\n",
+      "Mutation rate: 0.05   Max weight: 30.0  Average value: 38.7\n",
+      "Mutation rate: 0.1    Max weight: 29.9  Average value: 40.5\n",
+      "Mutation rate: 0.5    Max weight: 29.8  Average value: 48.1\n",
+      "Mutation rate: 1      Max weight: 29.9  Average value: 44.2\n",
+      "Mutation rate: 5      Max weight: 616.8  Average value: 290.8\n",
+      "Mutation rate: 10     Max weight: 662.1  Average value: 309.3\n",
+      "Mutation rate: 50     Max weight: 617.8  Average value: 315.6\n",
+      "Mutation rate: 100    Max weight: 645.8  Average value: 316.9\n"
      ]
     }
    ],
@@ -323,7 +323,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- It looks like somewhere between the mutation rates of 1 and 5, every member of the population becomes overweight.\n",
+    "- Somewhere between the mutation rates of 1 and 5, every member of the population becomes overweight.\n",
     "- ~0.5 looks optimal."
    ]
   },
@@ -336,23 +336,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Total weight: 29.6. Total value: 28\n",
+      "Total weight: 29.899999999999995. Total value: 30\n",
       "\n",
-      "   Name  Weight  Value      address_line_1          city  postcode   latitude  longitude\n",
-      "7     7     4.4      4       60 North Side     Rotherham   S62 7BP  53.467018  -1.343493\n",
-      "9     9     4.2      3      4 Queens Grove     Maidstone  ME15 9DU  51.244976   0.551896\n",
-      "11   11     4.5      3         4 Viewlands        Sefton   PR8 3TF  53.595472  -3.044394\n",
-      "12   12     5.3      5  34 Goldring Avenue    Sunderland   DH5 9FR  54.826545  -1.463713\n",
-      "14   14     5.0      5    2 Oaklands Close       Lambeth   SE5 9BA  51.466873  -0.099495\n",
-      "15   15     4.1      5  151 Rose Hill Road       Norwich   NR1 3PS  52.620659   1.295188\n",
-      "17   17     2.1      3       49 Kingscroft  East Suffolk  IP17 3DL  52.272931   1.622348\n"
+      "   Name  Weight  Value       address_line_1                          city  postcode   latitude  longitude\n",
+      "1     1     4.6      4           Park Place  Bath and North East Somerset  BS39 4EQ  51.362625  -2.575737\n",
+      "2     2     4.4      4  128 Pershore Avenue                      Bradford   BD7 3JE  53.785587  -1.779740\n",
+      "6     6     6.6      5         6 Eglos View                    Wandsworth  SW18 1UF  51.458106  -0.192737\n",
+      "8     8     2.9      3     5 Stryd Llewelyn                     Guildford  GU12 5EH  51.261701  -0.721138\n",
+      "11   11     2.4      1          4 Viewlands                        Sefton   PR8 3TF  53.595472  -3.044394\n",
+      "16   16     2.4      4        203 Grangeway                    Nottingham   NG5 2JR  52.980847  -1.147772\n",
+      "17   17     4.2      5        49 Kingscroft                  East Suffolk  IP17 3DL  52.272931   1.622348\n",
+      "19   19     2.4      4          2 Lych Gate                     Sheffield   S35 2EP  53.466005  -1.475101\n"
      ]
     }
    ],
