--- a/BASC0047/coursework.ipynb
+++ b/BASC0047/coursework.ipynb
@@ -336,20 +336,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Total weight: 29.899999999999995. Total value: 30\n",
+      "Total weight: 28.8. Total value: 29\n",
       "\n",
       "   Name  Weight  Value       address_line_1                          city  postcode   latitude  longitude\n",
       "1     1     4.6      4           Park Place  Bath and North East Somerset  BS39 4EQ  51.362625  -2.575737\n",
       "2     2     4.4      4  128 Pershore Avenue                      Bradford   BD7 3JE  53.785587  -1.779740\n",
-      "6     6     6.6      5         6 Eglos View                    Wandsworth  SW18 1UF  51.458106  -0.192737\n",
       "8     8     2.9      3     5 Stryd Llewelyn                     Guildford  GU12 5EH  51.261701  -0.721138\n",
+      "9     9     5.5      4       4 Queens Grove                     Maidstone  ME15 9DU  51.244976   0.551896\n",
       "11   11     2.4      1          4 Viewlands                        Sefton   PR8 3TF  53.595472  -3.044394\n",
       "16   16     2.4      4        203 Grangeway                    Nottingham   NG5 2JR  52.980847  -1.147772\n",
       "17   17     4.2      5        49 Kingscroft                  East Suffolk  IP17 3DL  52.272931   1.622348\n",
@@ -359,7 +359,7 @@
    ],
    "source": [
     "chosen_items, total_value, total_weight = genetic_algorithm(df_20)\n",
-    "print(f\"Total weight: {total_weight}. Total value: {total_value}\")\n",
+    "print(f\"Total weight: {total_weight:.1f}. Total value: {total_value}\")\n",
     "print()\n",
     "print(chosen_items)"
    ]
